@@ -87,6 +87,8 @@ UF_IMMUTABLE = 0x00000002
 UF_APPEND    = 0x00000004
 UF_OPAQUE    = 0x00000008
 UF_NOUNLINK  = 0x00000010
+UF_COMPRESSED = 0x00000020  # OS X: file is hfs-compressed
+UF_HIDDEN    = 0x00008000   # OS X: file should not be displayed
 SF_ARCHIVED  = 0x00010000
 SF_IMMUTABLE = 0x00020000
 SF_APPEND    = 0x00040000
